Added jquery file

--- a/0x15-javascript-web_jquery/1-main.html
+++ b/0x15-javascript-web_jquery/1-main.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Holberton School</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="jquery.js"></script>
   </head>
   <body>
     <header> 
