Updated the 4th task

--- a/0x15-javascript-web_jquery/3-main.html
+++ b/0x15-javascript-web_jquery/3-main.html
@@ -2,21 +2,17 @@
 <html lang="en">
   <head>
     <title>Holberton School</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="jquery.js"></script>
     <style>
       .red {
-        color: #FF0000;
+        color: #ff0000;
       }
     </style>
   </head>
   <body>
-    <header> 
-      First HTML page
-    </header>
+    <header>First HTML page</header>
     <div id="red_header">Red header</div>
-    <footer>
-      Holberton School - 2017
-    </footer>
+    <footer>Holberton School - 2017</footer>
     <script type="text/javascript" src="3-script.js"></script>
   </body>
 </html>
